--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,6 @@
     <color name="grayDarkDisabled">#8F8F8F</color>
     <color name="colorText">#282828</color>
     <color name="statusColor">#EDEDED</color>
+    <color name="strokeColor">#1E88D5</color>
+    <color name="opaqueBG">#61000000</color>
 </resources>
