--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="statusColor">#EDEDED</color>
     <color name="strokeColor">#1E88D5</color>
     <color name="opaqueBG">#61000000</color>
+    <color name="playerColor">#FF4329</color>
 </resources>
